--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 .block_form
 {
     width: 800px;
-    margin: 0 auto;
-    margin-bottom: 20px;
+    margin: 20px auto;
     color: white;
     padding-left: 10px;
     padding-right: 10px;
@@ -18,10 +17,6 @@
     left: calc(-1 * var(--borderWidth));
     height: calc(100% + var(--borderWidth) * 2);
     width: calc(100% + var(--borderWidth) * 2);
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
-    border-radius: calc(2 * var(--borderWidth));
-    z-index: -1;
-    animation: animatedgradient 3s ease alternate infinite;
     background-size: 300% 300%;
 }
 .top_bot{
