--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 {
     width: 800px;
     margin: 20px auto;
-    color: white;
     padding-left: 10px;
     padding-right: 10px;
     --borderWidth: 2px;
@@ -10,21 +9,12 @@
     position: relative;
     box-shadow: 0 0 5px 2px black;
 }
-/*.block_form:after {
-    content: '';
-    position: absolute;
-    top: calc(-1 * var(--borderWidth));
-    left: calc(-1 * var(--borderWidth));
-    height: calc(100% + var(--borderWidth) * 2);
-    width: calc(100% + var(--borderWidth) * 2);
-    background-size: 300% 300%;
-}*/
 .top_bot{
     padding-top: 10px;
     padding-bottom: 50px;
 }
 body{
-    background-color: var(--bs-body-bg);
+    background-color: deepskyblue;
     height: 100%;
     flex-direction: column;
     display: flex;
